Gifsicle NEWS

Version 1.40

* Include Makefile.bcc, from Stephen Schnipsel.


Version 1.39   11.Jul.2003

* Fix Makefile.w32 (oops).


Version 1.38   26.Jun.2003

* Include Makefile.w32 (oops).


Version 1.37   11.Feb.2003

* Fix bug where combining `--rotate-X' and `-O' options would cause a
  segmentation fault. Reported by Dan Lasley <Dan_Lasley@hilton.com>.

* Rearrange source tree.


Version 1.36   17.Nov.2002

* Fix subscript-out-of-range error in main.c reported by Andrea Suatoni.


Version 1.35   14.Aug.2002

* Fixed bug where `--crop' could cause a segmentation fault, present since
  1.32 or 1.33. Reported by Tom Schumm <phong@phong.org>.


Version 1.34   13.Aug.2002

* Fixed bug where combining `--crop' and `-O' options could corrupt output.
  Reported by Tom Schumm <phong@phong.org>.


Version 1.33   1.Aug.2002

* Be more careful about time while animating. In particular, prepare frames
  before they are needed, so that they can be displayed exactly when
  required. Problem reported by Walter Harms <WHarms@bfs.de>.

* More warning fixes.


Version 1.32   5.Jul.2002

* Add `--multifile' option handling concatenated GIF files. This is useful
  for scripts. For example, `gifsicle --multifile -' will merge all GIF
  files written to its standard input into a single animation.

* More fixes for spurious background warnings.


Version 1.31   17.Jun.2002

* Changed behavior of `--crop X,Y+WIDTHxHEIGHT' option when WIDTH or HEIGHT
  is negative. Previously, zero or negative WIDTH and HEIGHT referred to
  the image's entire width or height. Thus, the option `--crop 10,0+0x0'
  would always lead to an error, because the crop left position (10) plus
  the crop width (the image width) was 10 pixels beyond the image edge. The
  new behavior measures zero or negative WIDTH and HEIGHT relative to the
  image's bottom-right corner.

* Changed background behavior. Hopefully the only user-visible effect will
  be fewer spurious warnings.
