@@ -2,6 +2,9 @@ Gifsicle NEWS
 
 Version 1.40
 
+* Fix longstanding bug where '--disposal=previous' was mistakenly
+  equivalent to '--disposal=asis'.
+
 * Include Makefile.bcc, from Stephen Schnipsel.
 
 
